# scratchpad

./: Cargo.toml  README.md  justfile
src/: app.rs  error.rs  main.rs  renderer.rs
