[package]
name = "scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
snafu = "0.8.5"
wgpu = "=23.0.1"
winit = "0.30.9"
wgpu_glyph = "0.23.0"
ab_glyph = "0.2.23"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
ropey = "1.6.1"

[build-dependencies]
glob = "0.3.1"
